--- a/Lab4Report.adoc
+++ b/Lab4Report.adoc
@@ -259,6 +259,8 @@ GPIOA::MODER::MODER5::Output::Set();
 }
 ----
 
-Запустим программу и посмотрим на результат. Мы получили, что при нажатии кнопки,
-у нас включаются все четыре светодиода. Результат в формате *gif* лежит в папке *Photo*.
+Результат работы программы:
+
+image::https://https://github.com/wisp-sys/Lab4/blob/main/Photo/123.gif[]
+
 
